--- a/public/src/style.css
+++ b/public/src/style.css
@@ -101,3 +101,115 @@ label{
     outline-color: var(--fg-color);
 }
 
+@media (max-width: 1024px) {
+    .left{
+        margin-top:175px;
+        margin-left: 50px;
+        padding: 20px;
+        /* border: 2px solid white; */
+    
+    }
+    /* .submit-btn {
+      font-size: 26px;
+      width: 100px;
+    }
+  
+    .text-area {
+      width: 300px;
+      font-size: 20px;
+    } */
+}
+
+
+@media (min-width: 769px) and (max-width: 1024px) {
+    .submit-btn {
+      font-size: 20px;
+      width: 80px;
+      height: 40px;
+    }
+  
+    .text-area {
+      width: 280px;
+      font-size: 16px;
+    }
+
+    .left{
+        margin-top:175px;
+        margin-left: 10px;
+        padding: 20px;
+        /* border: 2px solid white; */
+    
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1044px) {
+    .submit-btn {
+      font-size: 20px;
+      width: 80px;
+      height: 40px;
+    }
+  
+    .text-area {
+      width: 280px;
+      font-size: 16px;
+    }
+
+    .left{
+        margin-top:175px;
+        margin-left: 10px;
+        padding: 20px;
+        /* border: 2px solid white; */
+    
+    }
+}
+
+
+@media (max-width: 480px) {
+    .contents {
+      display: grid;
+      grid-template-columns: 1fr; /* One column layout */
+      grid-auto-rows: auto;       /* Rows will size automatically */
+      width: 100%;
+      height: auto;               /* Let height adjust naturally */
+      gap: 10px;                  /* Optional: spacing between items */
+    }
+
+    .right{
+        border-top: 5px solid #363636;
+        border-left: none;
+    }
+
+
+    .left{
+        margin-top:10px;
+        align-items: center;
+        /* margin-left: 20px; */
+        padding: 20px;
+        /* border: 2px solid white; */
+    }
+
+    .submit-btn {
+        font-size: 20px;
+        width: 80px;
+        height: 45px;
+      }
+    
+      .text-area {
+        width: 200px;
+        font-size: 16px;
+      }
+
+    label{
+        font-size: 24px;
+        margin-left: 10px;
+    }
+
+    #qr-img{
+        border: 2px solid white;
+        border-radius: 10px;
+        width: 200px;
+        height: 200px;
+        margin-top: 30px;
+    }
+    
+  }
