--- a/public/src/style.css
+++ b/public/src/style.css
@@ -233,19 +233,19 @@ label{
     .left{
         margin-top:5px;
         align-items: center;
-          margin-left: 5px;
+          margin-left: 0px;
         padding: 20px;
           /* border: 2px solid white; */
     }
   
       .submit-btn {
           font-size: 20px;
-          width: 80px;
+          width: 30%;
           height: 45px;
         }
       
         .text-area {
-          width: 200px;
+          width: 60%;
           font-size: 16px;
           margin-left: 5px;
         }
