--- a/public/src/style.css
+++ b/public/src/style.css
@@ -120,8 +120,34 @@ label{
     } */
 }
 
+@media (min-width: 600px) and (max-width: 860px) {
+  .submit-btn {
+    font-size: 20px;
+    width: 80px;
+    height: 40px;
+  }
 
-@media (min-width: 769px) and (max-width: 1024px) {
+  .text-area {
+    width: 200px;
+    font-size: 16px;
+    margin-left: 0px;
+  }
+
+  .left{
+      margin-top:175px;
+      margin-left: 10px;
+      padding: 20px;
+      /* border: 2px solid white; */
+  
+  }
+
+  label{
+    font-size: 24px;
+  }
+}
+
+
+@media (min-width: 862px) and (max-width: 1024px) {
     .submit-btn {
       font-size: 20px;
       width: 80px;
